infra/k8s/orders-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports: 
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
