infra/k8s/payments-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  selector:
    app: payments
  ports: 
    - name: payments
      protocol: TCP
      port: 3000
      targetPort: 3000
