infra/k8s/tickets-mongo-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec: 
  selector:
    app: tickets-mongo
  ports: 
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
